# BattleSimulator

./: CMakeLists.txt  README.md  actor.cpp  actor.h  attackOne.cpp  attackOne.h  attackTwo.cpp  attackTwo.h  battleMove.h  enums.h  ghost.cpp  ghost.h  heal.cpp  heal.h  knight.cpp  knight.h  main.cpp  moveManager.cpp  moveManager.h  runner.cpp  runner.h  stack.h  warrior.cpp  warrior.h
